basic structure, styling

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,7 +15,8 @@
 
     position: absolute;
     height: 100%;
-    left: 0px;
+    left: 25px;
+    padding-top:20px;
     padding-left:10px;
     padding-right:5px;
         
