--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,12 @@
     font-family: "Roboto Mono", ;
 }
 
+.contentArea{
+    
+    height:100%;
+    width:100%
+}
+
 #eric{
     
     font-family:'Roboto Mono';
@@ -28,4 +34,12 @@
     font-size: 16px;
     font-weight: 400;
     margin-bottom:15px;
+}
+
+.landing{
+    
+    position:absolute;
+    left:400px;
+    top:120px; 
+
 }
