--- a/public/styles.css
+++ b/public/styles.css
@@ -40,6 +40,7 @@
     
     position:absolute;
     left:400px;
-    top:120px; 
-
+    font-family:'Roboto Mono';
+    font-size: 300px;
+    font-weight: 400;
 }
