--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,9 @@
 @font-face {
   font-family: "Roboto Mono";
 }
+li {
+  cursor: pointer;
+}
 .mainAreaAspects {
   position: absolute;
   left: 30%;
@@ -8,7 +11,7 @@
   right: 10%;
   bottom: 10%;
   font-family: 'Roboto Mono';
-  font-size: 300px;
+  font-size: 16px;
   font-weight: 400;
   background-color: forestgreen;
 }
@@ -40,14 +43,32 @@
   font-weight: 400;
   margin-bottom: 15px;
 }
-.landing {
+.hide {
+  display: none;
+}
+.show {
+  display: flex;
+}
+#landing {
   position: absolute;
   left: 30%;
   top: 125px;
   right: 10%;
   bottom: 10%;
   font-family: 'Roboto Mono';
-  font-size: 300px;
+  font-size: 16px;
   font-weight: 400;
   background-color: forestgreen;
+}
+#aboutBox {
+  position: absolute;
+  left: 30%;
+  top: 125px;
+  right: 10%;
+  bottom: 10%;
+  font-family: 'Roboto Mono';
+  font-size: 16px;
+  font-weight: 400;
+  background-color: forestgreen;
+  background-color: aliceblue;
 }
