--- a/public/styles.css
+++ b/public/styles.css
@@ -14,6 +14,26 @@ li {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
+#resumeIcon {
+  position: absolute;
+  left: 1px;
+  bottom: -48px;
+}
+#githubIcon {
+  position: absolute;
+  left: 45px;
+  bottom: -48px;
+}
+#linkedInIcon {
+  position: absolute;
+  left: 89px;
+  bottom: -47px;
+}
+#emailIcon {
+  position: absolute;
+  left: 132px;
+  bottom: -55px;
+}
 .mainAreaAspects {
   position: absolute;
   left: 30%;
