--- a/public/styles.css
+++ b/public/styles.css
@@ -44,6 +44,7 @@
     box-shadow: 4px 4px 6px #c7c7c7;
     background-image: url("assets/cold_spring.jpg");
     background-repeat: round;
+    box-shadow: 0 0 10px #c7c7c7;
     left: 10%;
     right: 10%;
     bottom: 30%;
@@ -52,6 +53,8 @@
     text-align: center;
     font-size: 13px;
     color: black;
+    padding-left: 5px;
+    padding-right: 5px;
   }
   #phoneResumeIcon {
     position: absolute;
