--- a/public/styles.css
+++ b/public/styles.css
@@ -97,6 +97,16 @@
     height: 20%;
   }
 }
+@media (max-width: 826px) and (max-height: 568px), (max-width: 826px) and (min-height: 519px) {
+  #phoneAboutMeContent {
+    font-size: 15px;
+  }
+}
+@media (max-width: 826px) and (min-height: 667px) {
+  #phoneAboutMeContent {
+    font-size: 19px;
+  }
+}
 li {
   cursor: pointer;
 }
