--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,21 @@
     display: none;
   }
 }
+@media (max-width: 376px) and (max-height: 667px) {
+  #phoneAboutMeContent {
+    font-size: 19px;
+  }
+}
+@media (max-width: 321px) and (max-height: 568px) {
+  #phoneAboutMeContent {
+    font-size: 15px;
+  }
+}
+@media (max-width: 321px) and (max-height: 480px) {
+  #phoneAboutMeContent {
+    font-size: 14px;
+  }
+}
 @media (max-width: 826px) {
   .desktop {
     display: none;
@@ -35,23 +50,16 @@
   }
   #phoneAboutMeContent {
     position: absolute;
-    left: 30%;
-    top: 120px;
-    bottom: 10%;
     font-family: 'Roboto Mono';
-    font-size: 13px;
     font-weight: 400;
-    box-shadow: 4px 4px 6px #c7c7c7;
-    background-image: url("assets/cold_spring.jpg");
-    background-repeat: round;
     box-shadow: 0 0 10px #c7c7c7;
     left: 10%;
     right: 10%;
     bottom: 50px;
+    top: 120px;
     background-image: none;
     background-color: aliceblue;
     text-align: center;
-    font-size: 15px;
     color: black;
     padding-left: 10px;
     padding-right: 10px;
@@ -95,16 +103,6 @@
     box-shadow: 0 0 10px #c7c7c7;
     width: 80%;
     height: 20%;
-  }
-}
-@media (max-width: 826px) and (max-height: 568px), (max-width: 826px) and (min-height: 519px) {
-  #phoneAboutMeContent {
-    font-size: 15px;
-  }
-}
-@media (max-width: 826px) and (min-height: 667px) {
-  #phoneAboutMeContent {
-    font-size: 19px;
   }
 }
 li {
