--- a/public/styles.css
+++ b/public/styles.css
@@ -11,14 +11,29 @@
     font-size: 17px;
   }
 }
+@media (max-width: 376px) and (max-height: 667px) and (orientation: landscape) {
+  #phoneAboutMeContent {
+    font-size: 16px;
+  }
+}
 @media (max-width: 321px) and (max-height: 568px) {
   #phoneAboutMeContent {
     font-size: 14px;
   }
 }
+@media (max-width: 321px) and (max-height: 568px) and (orientation: landscape) {
+  #phoneAboutMeContent {
+    font-size: 13px;
+  }
+}
 @media (max-width: 321px) and (max-height: 480px) {
   #phoneAboutMeContent {
     font-size: 13px;
+  }
+}
+@media (max-width: 321px) and (max-height: 480px) and (orientation: landscape) {
+  #phoneAboutMeContent {
+    font-size: 12px;
   }
 }
 @media (max-width: 826px) {
