--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,7 @@
     font-size: 17px;
   }
 }
-@media (max-width: 376px) and (max-height: 667px) and (orientation: landscape) {
+@media (max-height: 376px) and (max-width: 667px) {
   #phoneAboutMeContent {
     font-size: 15px;
   }
@@ -21,7 +21,7 @@
     font-size: 14px;
   }
 }
-@media (max-width: 321px) and (max-height: 568px) and (orientation: landscape) {
+@media (max-height: 321px) and (max-width: 568px) {
   #phoneAboutMeContent {
     font-size: 12px;
   }
@@ -31,7 +31,7 @@
     font-size: 13px;
   }
 }
-@media (max-width: 321px) and (max-height: 480px) and (orientation: landscape) {
+@media (max-height: 321px) and (max-width: 480px) {
   #phoneAboutMeContent {
     font-size: 11px;
   }
