--- a/public/styles.css
+++ b/public/styles.css
@@ -221,7 +221,8 @@ li {
 #about,
 #diner,
 #feedMe,
-#dreamTeam {
+#dreamTeam,
+#updates {
   font-family: 'Roboto Mono';
   font-size: 16px;
   font-weight: 400;
